--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Hello.</h1>
+    <h3>Min demo-sidor</h3>
+    <ul>
+        <li><a href="html-upp1/"> uppgift 1</a></li>
+    </ul>
 </body>
 </html>
