--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Hello.</h1>
     <h3>Min demo-sidor</h3>
     <ul>
-        <li><a href="html-upp1/"> uppgift 1</a></li>
+        <li><a href="html-uppg1/"> uppgift 1</a></li>
     </ul>
 </body>
 </html>
